--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "lint": "eslint"
+    "lint": "npx eslint"
   },
   "repository": {
     "type": "git",
@@ -21,13 +21,14 @@
   },
   "homepage": "https://github.com/vudidi/express-mesto-gha#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongoose": "^6.3.3"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.2",
     "nodemon": "^2.0.16",
     "prettier": "2.6.2"
   }
