bugfix: правки eslintr, package.json

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,6 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": ["eslint:recommended", "airbnb-base"],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
+  "extends": "airbnb-base",
   "rules": {
-    "allowAfterThis": false,
-    "allowAfterSuper": false,
-    "allowAfterThisConstructor": false,
-    "enforceInMethodNames": false,
-    "enforceInClassFields": false,
-    "allowFunctionParams": true,
     "no-underscore-dangle": ["error", {
       "allow": ["_id"]
     }]
