--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
   },
   "homepage": "https://github.com/vudidi/express-mesto-gha#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.3"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.3",
+    "objectid": "^3.2.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
